# be_bbdcb_xaldigital

./: README.md  env  pyproject.toml  requeriments.txt  server.py
app/: main.py
app/conf/: database.py
app/models/: AerolineasModel.py  AeropuertosModel.py  MovimientosModel.py  VuelosModel.py
app/repository/: AerolineasRepository.py  AeropuertoRepository.py  MovimientosRepository.py  VuelosRepository.py
app/router/: aerolineas.py  aeropuerto.py  answers.py  api.py  movimientos.py  vuelos.py
app/schema/: AerolineasSchema.py  AeropuertosSchema.py  AnswerSchema.py  MovimientosSchema.py  VuelosSchema.py
app/seeder/: seed.py
app/service/: Answers.py
