[tool.poetry]
name = "xaldigital"
version = "0.1.0"
description = "Este es un reto de programacion"
authors = ["Baldomero de castilla <bttuxs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-decouple = "^3.8"
flake8 = "^7.0.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
